# DRF-Auth

./: pyproject.toml  requirements.txt
Blog/: README.md  credentials.txt  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
Blog/Blog/: settings.py  urls.py
Blog/Post/: admin.py  models.py  permissions.py  views.py
Blog/Post/migrations/: 0001_initial.py
